# full-count

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  release-plz.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  release-plz.yml  release.yml
docs/: index.html
docs/assets/: styles.css
docs/guide/: advanced-stats.html  development.html  getting-started.html  index.html  replay.html  saves.html  scoring.html  why.html
scripts/: pull_astros_scoreability.py
src/: app.rs  export.rs  game.rs  input.rs  main.rs  persist.rs  test_helpers.rs  ui.rs
templates/: scorecard.html
test_data/: eagles-vs-hawks.json
test_data/mlb/: astros-scoreability-2026-04-09-game-824374.json  astros-scoreability-2026-04-09.json
test_data/mlb/issues/2026-04-09/: astros-2026-04-08-game-824374-event-type-sac_bunt.md
