[package]
name = "full-count"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "full-count"
path = "src/main.rs"

[features]
# Enable entry and display of season batting averages.
# Compile with: cargo build --features season-avg
season-avg = []

[dependencies]
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.6.0", features = ["derive"] }
thiserror = "1"
