[package]
name = "full-count"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "full-count"
path = "src/main.rs"

[features]
# Enable advanced stat tracking: season batting averages, hit breakdowns (2B/3B/HR),
# stolen bases, caught stealing, LOB, wild pitches, batters faced, and more.
# Compile with: cargo build --features advanced-stats
advanced-stats = []

[dependencies]
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.6.0", features = ["derive"] }
thiserror = "1"
